projects/blood_bank/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: bankapp-statefulset
spec:
  replicas: 1
  serviceName: "bankapp-service"
  selector:
    matchLabels:
      app: bankapp
  template:
    metadata:
      labels:
        app: bankapp
    spec:
      containers:
        - name: bankapp-container
          image: bharatsanapala/bloody:dbimage
          ports:
            - containerPort: 3306
          resources:
            requests:
              cpu: "100"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
          volumeMounts:
          - name: mysql-persistant-storage
            mountPath: /usr/share/nginx/html
  volumeClaimTemplates:
  - metadata:
      name: my-sql-persistant-storage
    spec:
      accessModes: [ReadWriteOnce]
      resources:
        requests:
          storage: 1Gi
