projects/blood_bank/app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: app-service
spec:
  type: ClusterIP
  selector:
    app: bankapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
