projects/blood_bank/networkpolicy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: bankapp-network-policy
spec:
  podSelector:
    matchLabels:
      app: bankapp
  policyTypes:
    - Ingress
    - Egress

  ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: ingress-nginx
          podSelector:
            matchLabels:
              app.kubernetes.io/component: controller

      ports:
        - protocol: TCP
          port: 80
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: bankapp-db
      ports:
        - protocol: TCP
          port: 3306
        - to:
          - nameSpaceSelector:
              matchLabels:
                kubernetes.io/metadata.name: kube-system
                ports:
                  - protocol: UDP
                    port: 53
